--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 title                    : "Lifeng Zhu (朱利丰)"
-description              : "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus ornare aliquet ipsum, ac tempus justo dapibus sit amet. "
+description              : "Focusing on robotics, graphics and haptics. "
 repository               : "lfzhulf/lfzhulf.github.io"
 google_scholar_stats_use_cdn : false
 
