--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ baidu_site_verification  :  # get baidu_site_verification from https://ziyuan.ba
 # Site Author
 author:
   name             : "Lifeng Zhu (朱利丰)"
-  avatar           : "images/lfzhu_profile.png"
+  avatar           : "images/lfzhulf.png"
   bio              : "ISE, Southeast University"
   location         : "Nanjing, China"
   employer         :
