--- a/_config.yml
+++ b/_config.yml
@@ -35,7 +35,7 @@ author:
   codepen          :
   dribbble         :
   flickr           :
-  facebook         :
+  website          : "https://ins.seu.edu.cn/zlf/list.htm"
   foursquare       :
   github           : # e.g., "github username"
   google_plus      :
